# mauikit-calendar

./: .gitignore  .kde-ci.yml  CMakeLists.txt  Mainpage.dox  MauiKitCalendarConfig.cmake.in  MauiKitCalendarConfig.cmake.in.5  MauiKitCalendarConfig.cmake.in.6  Messages.sh  README.md  metainfo.yaml
examples/: DatePicker.qml  DaysGrid.qml  MonthView.qml  MonthsGrid.qml  TimeComboBox.qml  TimePicker.qml  YearView.qml  YearsGrid.qml
po/ar/: mauikitcalendar.po
po/ca/: mauikitcalendar.po
po/ca@valencia/: mauikitcalendar.po
po/cs/: mauikitcalendar.po
po/de/: mauikitcalendar.po
po/en_GB/: mauikitcalendar.po
po/eo/: mauikitcalendar.po
po/es/: mauikitcalendar.po
po/eu/: mauikitcalendar.po
po/fi/: mauikitcalendar.po
po/fr/: mauikitcalendar.po
po/ga/: mauikitcalendar.po
po/gl/: mauikitcalendar.po
po/he/: mauikitcalendar.po
po/it/: mauikitcalendar.po
po/ja/: mauikitcalendar.po
po/ka/: mauikitcalendar.po
po/ko/: mauikitcalendar.po
po/lt/: mauikitcalendar.po
po/lv/: mauikitcalendar.po
po/nl/: mauikitcalendar.po
po/pl/: mauikitcalendar.po
po/pt/: mauikitcalendar.po
po/pt_BR/: mauikitcalendar.po
po/sa/: mauikitcalendar.po
po/sk/: mauikitcalendar.po
po/sl/: mauikitcalendar.po
po/sv/: mauikitcalendar.po
po/tr/: mauikitcalendar.po
po/uk/: mauikitcalendar.po
po/zh_CN/: mauikitcalendar.po
po/zh_TW/: mauikitcalendar.po
src/: CMakeLists.txt
src/code/: calendarmanager.cpp  calendarmanager.h  collection.h  collectioncomboboxmodel.h  filter.h  incidencewrapper.cpp  incidencewrapper.h  mimetypes.h  moduleinfo.cpp  moduleinfo.h  plugin.cpp  plugin.h
src/code/lib/: CMakeLists.txt  colorproxymodel.cpp  colorproxymodel.h
src/code/models/: attendeesmodel.cpp  hourlyincidencemodel.cpp  hourlyincidencemodel.h  incidenceoccurrencemodel.cpp  incidenceoccurrencemodel.h  infinitecalendarviewmodel.cpp  infinitecalendarviewmodel.h  monthmodel.cpp  monthmodel.h  multidayincidencemodel.cpp  multidayincidencemodel.h  timezonelistmodel.cpp  timezonelistmodel.h  todosortfilterproxymodel.cpp  todosortfilterproxymodel.h
src/controls/: CollectionComboBox.qml  DateComboBox.qml  DatePicker.qml  DayGridView.qml  DaysGrid.qml  EventPage.qml  HourlyView.qml  KalendarUiUtils.qml  Month.qml  MonthView.qml  MonthsGrid.qml  TimeComboBox.qml  TimePicker.qml  YearView.qml  YearsGrid.qml  qml.qrc  qmldir
src/controls.5/: DatePicker.qml  DayLabelsBar.qml  KalendarUiUtils.qml  MonthsGrid.qml
src/controls.6/: CollectionComboBox.qml  DateComboBox.qml  DatePicker.qml  DayGridView.qml  DayLabelsBar.qml  DaysGrid.qml  EventPage.qml  HourlyView.qml  KalendarUiUtils.qml  MonthView.qml  MonthsGrid.qml  TimeComboBox.qml  TimePicker.qml  YearView.qml  YearsGrid.qml  qml.qrc
